# aoc2025

./: .gitignore  CMakeLists.txt  aoc-common.cpp  shell.nix
common/: aoc-common.h
day1/: main.cpp
